# cpp-web-server

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requests.http
Docker/: Dockerfile
Test/: TestMacros.cpp  main.cpp
Test/URL/: PatternURLTest.cpp
Test/include/: TestMacros.h
Test/src/: HTTPParserTest.cpp  TestMacros.cpp
Test/src/URL/: PatternURLTest.cpp  URLMapperTest.cpp  URLTest.cpp
include/: ClientRequest.h  DummyMiddleware.h  HTTPMappingRegistrar.h  HTTPMethod.h  HTTPParser.h  Logger.h  Middleware.h  ServerMapping.h  ThreadPool.h  WebServer.h  WebServerBuilder.h
include/Exceptions/: ClientError.h  HTTPExceptionBase.h  InformationResponses.h  RedirectionMessages.h  ServerError.h  SuccessfulResponses.h
include/HTTPResolver/: HTTPContext.h  HTTPMappingRegistrar.h  HTTPMethod.h  HTTPParser.h
include/HTTPResolver/Exceptions/: ClientError.h  HTTPExceptionBase.h  InformationResponses.h  RedirectionMessages.h  ServerError.h  SuccessfulResponses.h
include/HTTPResolver/ProcessClasses/: BaseHTTPProcess.h  BaseHTTPStaticContentProcess.h  HTTPBinaryProcess.h  HTTPFileProcess.h  HTTPTextProcess.h
include/HTTPResolver/States/: HTTPState.h
include/ProcessClasses/: BaseHTTPContentProcess.h  BaseHTTPProcess.h  HTTPBinaryProcess.h  HTTPTextClass.h  HTTPTextProcess.h
include/States/: HTTPState.h
include/URL/: PatternURL.h  URL.h  URLMapper.h
include/interface/: Middleware.h
src/: ClientRequest.cpp  DummyMiddleware.cpp  HTTPMappingRegistrar.cpp  HTTPParser.cpp  Logger.cpp  Middleware.cpp  ServerMapping.cpp  ThreadPool.cpp  WebServer.cpp  WebServerBuilder.cpp
src/Exceptions/: ClientError.cpp  HTTPExceptionBase.cpp  InformationResponses.cpp  RedirectionMessages.cpp  ServerError.cpp  SuccessfulResponses.cpp
src/HTTPResolver/: HTTPContext.cpp  HTTPMappingRegistrar.cpp  HTTPParser.cpp
src/HTTPResolver/Exceptions/: ClientError.cpp  HTTPExceptionBase.cpp  InformationResponses.cpp  RedirectionMessages.cpp  ServerError.cpp  SuccessfulResponses.cpp
src/HTTPResolver/ProcessClasses/: BaseHTTPContentProcess.cpp  BaseHTTPProcess.cpp  HTTPBinaryProcess.cpp  HTTPFileProcess.cpp  HTTPTextProcess.cpp
src/HTTPResolver/States/: HTTPState.cpp
src/ProcessClasses/: BaseHTTPContentProcess.cpp  BaseHTTPProcess.cpp  HTTPBinaryProcess.cpp  HTTPTextClass.cpp  HTTPTextProcess.cpp
src/States/: HTTPState.cpp
src/URL/: PatternURL.cpp  URL.cpp  URLMapper.cpp
